# BRPC

./: .gitignore  AGENTS.md  README.md  environment.yml  factory_aggregated.csv  factory_aggregated.npz  lhs_dataset_v2.xlsx  nn_std.bundle.joblib  nnz.bundle.joblib  physical_data.csv  pyproject.toml  rcam_stream_windjump.csv  rolled_cusum_modeling_workdoc.md
brpc/: AGENTS.md  __init__.py  experiments.py
calib/: AGENTS.md  Deal_data.py  PF_ablation_exp.py  PS_py.py  __init__.py  analyze_pt.ipynb  analyze_slope_uni.py  analyze_sudden_uni.py  bocpd.py  bocpd_gpytorch.py  bpc.py  bpc_bocpd.py  configs.py  data.py  delta_gp.py  delta_gp_gpytorch.py  diag.ipynb  emulator.py  enhanced_data.py  experiment_highdim_projected.py  experiment_plantsim.py  experiment_rcam.py  experiment_rcam6d.py  experiment_rcam6d_hybrid.py  experiment_synthetic_cpd_suite.py  experiment_synthetic_mixed.py  experiment_synthetic_slope.py  experiment_synthetic_sudden.py  expert_delta.py  joint_enkf.py  kernels.py  koh_batch_calibrator.py  koh_calibrator.py  likelihood.py  method_names.py  moe_calibrator.py  online_calibrator.py  paper_pf_digital_twin.py  particle_specific_discrepancy.py  particles.py  (+64 more)
docs/: AGENTS.md  README.md
experiments/: AGENTS.md  README.md
notebooks/: AGENTS.md  README.md  analysis.ipynb  debug.ipynb  particles_analysis.ipynb  simulation_trial.ipynb
scratch/: AGENTS.md  README.md  _tmp_compute_cp_quality_metrics.py  _tmp_compute_plantsim_cp_quality.py  _tmp_digital_twin_pf_paper.txt  _tmp_inspect_cpd_events.py  _tmp_inspect_cpd_payloads.py  _tmp_patch_threshold_note.py  (+11 more)
(+37 files in other folders)
